<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/Gráfico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/descripcionDeImagen"
        app:layout_constraintBottom_toTopOf="@+id/subtituloDeImagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenlogobitcoin"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtituloDeImagen" />

    <TextView
        android:id="@+id/Moneda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btc"
        android:textAlignment="center"
        android:textColor="@color/azulOscuro"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/PrecioCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:text="@string/PrecioEndollar"
        android:textAlignment="center"
        android:textColor="@color/azulOscuro"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Moneda" />

    <Button
        android:id="@+id/botonCambiarMoneda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/azulOscuro"
        android:onClick="ActualizarPrecio"
        android:text="@string/BotonCambiarMoneda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PrecioCurrency" />

    <Button
        android:id="@+id/buttonApuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:onClick="ActivityApuesta"
        android:text="@string/hacer_apuesta"
        android:textColor="@color/azulOscuro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/botonVerDatos"
        app:layout_constraintTop_toBottomOf="@+id/botonCambiarMoneda"
        app:layout_constraintVertical_bias="0.294" />

    <TextView
        android:id="@+id/subtituloDeImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/gr_fico_24h"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Gráfico" />

    <Button
        android:id="@+id/botonVerDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:onClick="ActivityDatos"
        android:text="@string/ver_datos"
        android:textColor="@color/azulOscuro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonApuesta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonCambiarMoneda"
        app:layout_constraintVertical_bias="0.294" />

    <ImageView
        android:id="@+id/imagenlogobitcoin"
        android:layout_width="66dp"
        android:layout_height="51dp"
        android:layout_marginTop="13dp"
        app:layout_constraintBottom_toTopOf="@+id/Gráfico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>