<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityDatos">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="292dp"
        android:layout_height="94dp"
        android:scaleY="3"
        android:progressBackgroundTint="@color/rojoClaro"
        android:progressBackgroundTintMode="src_over"
        android:progressTint="@color/verdeClaro"
        android:scrollX="15dp"
        android:secondaryProgressTintMode="src_over"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apuestas_correctas"
        android:layout_marginTop="13dp"
        android:textColor="@color/verdeClaro"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apuestas_incorrectas"
        android:textColor="@color/rojoClaro"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/porcentajeAciertos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/porcentajeFallos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>